--- a/week-3/enhanced-composer-app/src/index.html
+++ b/week-3/enhanced-composer-app/src/index.html
@@ -1,3 +1,14 @@
+<!--
+======================================
+; Title: index.html
+; Author: Chris Gorham
+; Date: 05 June 2023
+; Description: This code is for the index html for the enhanced composer app project
+; Sources Used:
+; Exercise 3.2 Instructions
+=====================================
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
