--- a/week-3/enhanced-secure-profile-app/src/index.html
+++ b/week-3/enhanced-secure-profile-app/src/index.html
@@ -1,8 +1,19 @@
+<!--
+======================================
+; Title: index.html
+; Author: Chris Gorham
+; Date: 06 June 2023
+; Description: This code is for the index html portions of the enhanced secure profile app
+; Sources Used:
+; Assignment 3.4 Instructions
+=====================================
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Secure Profile App</title>
+  <title>Enhanced Secure Profile App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
