--- a/week-3/secure-profile-app/src/index.html
+++ b/week-3/secure-profile-app/src/index.html
@@ -1,3 +1,14 @@
+<!--
+======================================
+; Title: index.html
+; Author: Chris Gorham
+; Date: 06 June 2023
+; Description: This code is for the index html portions of the secure profile app
+; Sources Used:
+; Exercise 3.3 Instructions
+=====================================
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
