code comments & attribution updates

--- a/week-4/di-composer-app/src/index.html
+++ b/week-4/di-composer-app/src/index.html
@@ -2,10 +2,10 @@
 ======================================
 ; Title: index.html
 ; Author: Chris Gorham
-; Date: 05 June 2023
-; Description: This code is for the index html for the enhanced composer app project
+; Date: 12 June 2023
+; Description: This code is for the index html for the di composer app project
 ; Sources Used:
-; Exercise 3.2 Instructions
+; Exercise 4.2 Instructions
 =====================================
 -->
 
@@ -13,7 +13,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ComposerApp</title>
+  <title>DI Composer App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
