--- a/week-4/reactive-composer-app/src/index.html
+++ b/week-4/reactive-composer-app/src/index.html
@@ -3,9 +3,9 @@
 ; Title: index.html
 ; Author: Chris Gorham
 ; Date: 12 June 2023
-; Description: This code is for the index html for the di composer app project
+; Description: This code is for the index html for the reactive composer app project
 ; Sources Used:
-; Exercise 4.2 Instructions
+; Exercise 4.3 Instructions
 =====================================
 -->
 
