--- a/week-5/in-n-out-booksp1/src/index.html
+++ b/week-5/in-n-out-booksp1/src/index.html
@@ -1,3 +1,14 @@
+<!--
+======================================
+; Title: index.html
+; Author: Chris Gorham
+; Date: 21 June 2023
+; Description: This code is for the html portions of the app component for the In-N-Out Books project (Part 1)
+; Sources Used:
+; Exercise 5.2 Instructions
+=====================================
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
