--- a/week-5/in-n-out-booksp3/src/index.html
+++ b/week-5/in-n-out-booksp3/src/index.html
@@ -3,9 +3,9 @@
 ; Title: index.html
 ; Author: Chris Gorham
 ; Date: 21 June 2023
-; Description: This code is for the html portions of the app component for the In-N-Out Books project (Part 2)
+; Description: This code is for the html portions of the app component for the In-N-Out Books project (Part 3)
 ; Sources Used:
-; Exercise 5.3 Instructions
+; Assignment 5.4 Instructions
 =====================================
 -->
 
@@ -13,7 +13,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InNOutBooksp1</title>
+  <title>In N Out Books Part 3</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
