--- a/week-6/gpa-calculator-app1/src/index.html
+++ b/week-6/gpa-calculator-app1/src/index.html
@@ -1,8 +1,19 @@
+<!--
+======================================
+; Title: index.html
+; Author: Chris Gorham
+; Date: 26 June 2023
+; Description: This code supports functionality for the GPA Calculator App (Part 1)
+; Sources Used:
+; Exercise 6.3 Instructions
+=====================================
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GpaCalculatorApp1</title>
+  <title>GPA Calculator App (Part 1)</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
