--- a/week-6/gpa-calculator-app2/src/index.html
+++ b/week-6/gpa-calculator-app2/src/index.html
@@ -3,9 +3,9 @@
 ; Title: index.html
 ; Author: Chris Gorham
 ; Date: 26 June 2023
-; Description: This code supports functionality for the GPA Calculator App (Part 1)
+; Description: This code supports functionality for the GPA Calculator App (Part 2)
 ; Sources Used:
-; Exercise 6.3 Instructions
+; Assignment 6.4 Instructions
 =====================================
 -->
 
@@ -13,7 +13,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GPA Calculator App (Part 1)</title>
+  <title>GPA Calculator App (Part 2)</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
