--- a/week-7/gpa-calculator-app3/src/index.html
+++ b/week-7/gpa-calculator-app3/src/index.html
@@ -2,10 +2,10 @@
 ======================================
 ; Title: index.html
 ; Author: Chris Gorham
-; Date: 27 June 2023
-; Description: This code supports functionality for the GPA Calculator App (Part 2)
+; Date: 03 July 2023
+; Description: This code supports functionality for the GPA Calculator App (Part 3)
 ; Sources Used:
-; Assignment 6.4 Instructions
+; Exercise 7.2 Instructions
 =====================================
 -->
 
@@ -13,7 +13,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GPA Calculator App (Part 2)</title>
+  <title>GPA Calculator App (Part 3)</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
